2007-02-10  Akim Demaille  <akim.demaille@free.fr>

	* src/flavorable.hh (libport/assert.hh): Include it.

2007-02-10  Akim Demaille  <akim.demaille@free.fr>

	svn merge -r 826:832 https://svn.gostai.com/svn/kernel1/branches/1.0
	2007-02-09  Matthieu Nottale  <nottale@gostai.com>

	Fix armor/unarmor.
	* src/ustring.cc: Armor \n, \t and character not in 32-127
	range. Unarmor \n \t \<anychar> and \number.
			 More efficient unarmor implementation.

	2007-02-07  Matthieu Nottale  <nottale@gostai.com>

	Add the 'functions' keyword, send the list of functions (as 'vars').
	* src/parser/bison/utoken.l: Here,
	* src/ucommand.cc: and here.

2007-02-06  Akim Demaille  <demaille@gostai.com>

	Fix include
	* src/ucomplaints.cc (libport/assert.hh): Include it.

2007-02-06  Akim Demaille  <demaille@gostai.com>

	svn merge -r 800:825 https://svn.gostai.com/svn/kernel1/branches/1.0
	Also, use more pabort than abort.

	2007-02-06  Matthieu Nottale  <nottale@gostai.com>

	Fix a bug when copying a binary with no header. Replace aborts
	with asserts to differenciate between them should they trigger.
	* src/uexpression.cc: Here.

	2007-02-02  Akim Demaille  <akim@lrde.epita.fr>

	* configure.ac: Let URBI_PROG_CXX do it.

	2007-02-02  Akim Demaille  <akim@lrde.epita.fr>

	* src/utypes.hh (TagInfo::TagInfo): New copy ctor..

2007-02-06  Akim Demaille  <demaille@gostai.com>

	Restore weird loop
	Reported by MN.
	* src/network/bsdnet/network.cc (notify): Use two iterators
	to walk that list.
	(pipes_type): New.
	Use it.

2007-02-01  Akim Demaille  <akim@lrde.epita.fr>

	Bug fix: copy-ctor for TagInfo.
	* src/tag-info.hh, src/tag-info.cc: Add a copy constructor.
	Rewrite the code to make it a bit clearer.

2007-02-01  Akim Demaille  <akim@lrde.epita.fr>

	Fix the previous checkin.
	* src/Makefile.am: Add tag-info.* where needed.
	* src/tag-info.hh, src/tag-info.cc: Add missing includes.
	Remove implementations from the header.

2007-02-01  Akim Demaille  <akim@lrde.epita.fr>

	tag-info.*.