@@ -1,5 +1,11 @@
 2007-02-10  Akim Demaille  <akim.demaille@free.fr>
 
+	Use libport::escape
+	* src/ustring.cc (armor): here.
+	* src/Makefile.am: Compile the libport_sources.
+
+2007-02-10  Akim Demaille  <akim.demaille@free.fr>
+
 	* src/flavorable.hh (libport/assert.hh): Include it.
 
 2007-02-10  Akim Demaille  <akim.demaille@free.fr>
